Añadimos el .gitignore

--- a/principal.html
+++ b/principal.html
@@ -8,6 +8,10 @@
     <header>
         <h1>Titulo del blog</h1>
     </header>
+    <nav>
+        <a href="lugares.html">Mejores lugares</a>
+        <a href="aficiones.html">Mis aficiones</a>
+    </nav>
     <section>
         <article>
             <h2>Contenido principal</h2>
