--- a/lugares.html
+++ b/lugares.html
@@ -3,16 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Mejores lugares</title>
+    <link href="css/estilos.css" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Mejores lugares</h1>
+        <h1 class="contenedores">Mejores lugares</h1>
     </header>
     <section>
-        <article>
+        <article class="contenedores">
             <h2>Turquia</h2>
             <p>Me encanta este sitio porque me voy a quedar calvo y en el futuro tendre que visitarlo</p>
+            <div>
+                <p>Aqui podemos apreciar su belleza</p>
+                <img src="imgs/Turquia2.jpeg">
+            </div>
         </article>
     </section>
+    <footer class="contenedores">
+        <a href="principal.html">Volver</a>
+    </footer>
 </body>
 </html>
