--- a/principal.html
+++ b/principal.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Document</title>
-</head>
+    <link href="css/estilos.css" rel="stylesheet">
 <body>
     <header>
         <h1>Titulo del blog</h1>
     </header>
-    <nav>
+    <nav class="contenedores">
         <a href="lugares.html">Mejores lugares</a>
+        <br>
         <a href="aficiones.html">Mis aficiones</a>
     </nav>
     <section>
-        <article>
-            <h2>Contenido principal</h2>
-            <p>Este es el contenido de la pagina</p>
+        <article class="contenedores">
+            <h2 class="alinea">Contenido principal</h2>
+            <p class="alinea">Este es el contenido de la pagina</p>
         </article>
     </section>
-    <aside>
+    <aside class="contenedores">
         <h3>Opiniones</h3>
         <p>Me gusta esta pagina</p>
     </aside>
-    <footer>
+    <footer class="contenedores">
         <h4>Sobre esta pagina</h4>
     </footer>
 </body>
